Fix for nag header not collapsing correctly on desktop

--- a/src/css/bootcards-android.css
+++ b/src/css/bootcards-android.css
@@ -119,20 +119,17 @@ a,
 
 .navbar-default .navbar-brand,
 .navbar-default .navbar-brand:hover {
-	display: block;
-	padding: 0;
-	margin: 0 -10px;
+	position: absolute;
+	left: 26px;
+	font-weight: 500;
 	color: #000;
 	white-space: nowrap;
-	font-size: 18px;
-	font-weight: 500;
-	line-height: 49px;
-	text-align: left;
 }
 
-.navbar > .container .navbar-brand {
-	margin-left: 0;
-	padding-left: 0;
+@media (min-width: 768px) {
+	.navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+		margin-left: 0; 
+	}
 }
 
 .navbar-fixed-top .btn,
